--- a/index.html
+++ b/index.html
@@ -18,13 +18,12 @@
         <h1 id="artist_name">Artist : # </h1>
         <h2 id="song_name">Song : #</h2>
         <h4 id="song_count"> # / # </h4>
-        <img id="songimg" src="./images/1.jpg" alt="song picture" class="spinner"
-            style="animation-play-state: running;">
+        <img id="songimg" src="./images/1.jpg" alt="song picture" class="spinner" style="animation-play-state: paused;">
         <span id="currsong" data-songpath="./songs/tron.mp3" hidden></span>
         <div>
             <button id="prev"><img src="./images/previous.png"></img></button>
-            <button id="play" class="hidden"><img src="./images/play.png"></img></button>
-            <button id="pause"><img src="./images/pause.png"></img></button>
+            <button id="play"><img src="./images/play.png"></img></button>
+            <button id="pause" class="hidden"><img src="./images/pause.png"></img></button>
             <button id="next"><img src="./images/previous.png" style="transform: rotate(180deg);"></button>
         </div>
 
